# CPP_project

Babel/: CMakeLists.txt  babel.sh  conanfile.txt
Babel/audio/: Makefile  audio.cpp  audio.hpp  opusTest.cpp  recorded.raw  testAudio.cpp
Babel/audio/inc/: audio.hpp  main.hpp
Babel/client/: Makefile
Babel/client/src/: audio.cpp  main.cpp
Babel/graph/: CMakeLists.txt  babel.pro  babel.pro.user.3787941  client.cpp  customcallbutton.cpp  customcallbutton.h  customlabelcontacts.cpp  customlabelcontacts.h  customwidget.cpp  customwidget.h  customwidgettwo.cpp  customwidgettwo.h  labelcontactlist.cpp  labelcontactlist.h  main.cpp  mainwindow.cpp  mainwindow.h
Babel/server/: CMakeLists.txt  Makefile
Babel/server/contact/: list_contact.txt
Babel/server/include/: communicate.hpp  contact.hpp  list_connect.hpp  my.hpp  recv.hpp  serveur.hpp  user.hpp
Babel/server/jsp/: client.cpp  serveur  serveur.cpp  seveur
Babel/server/jsp/test_udp_send/: recv  recv.cpp  send  send.cpp
Babel/server/src/: communicate.cpp  contact.cpp  list_connect.cpp  main.cpp  serveur.cpp
Babel/server/src/sauv/: main.cpp  this_sauv.cpp
RTYPE/: CMakeLists.txt  Makefile  conanfile.txt
RTYPE/client/: CMakeLists.txt  Makefile
RTYPE/client/include/: data.hpp  handle.hpp
RTYPE/client/src/: data.cpp  handle.cpp  main.cpp
RTYPE/documentation/: documentation_protocl_rtype.txt  test2.txt
RTYPE/server/: CMakeLists.txt  Makefile  note
RTYPE/server/include/: Enemy.hpp  Engine.hpp  Lazer_enemy.hpp  Lazer_player.hpp  Obstacle.hpp  Player.hpp  action.hpp  client.hpp  data.hpp  party.hpp  send_file.hpp  tab_action.hpp  tab_client.hpp  tab_party.hpp
RTYPE/server/src/: Colision.cpp  Draw.cpp  Enemy.cpp  Engine.cpp  Input.cpp  Lazer_enemy.cpp  Lazer_player.cpp  Obstacle.cpp  Player.cpp  Update.cpp  action.cpp  client.cpp  data.cpp  main.cpp  party.cpp  send_file.cpp  tab_action.cpp  tab_client.cpp  tab_party.cpp
